# solidmcp

./: ARCHITECTURE_REFACTOR.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PERFORMANCE_ANALYSIS_REPORT.md  README.md  ROADMAP.md  TEST_MIGRATION_SUMMARY.md  small-file-size-for-code.md  temp_debug.txt  test_output.txt
.claude/: PROJECT.md
.claude/agents/: fix-documenter.md  tdd-agent.md  tdd-enforcer.md  tdd-quick-reference.md
benches/: json_processing.rs
docs/: API_REFERENCE.md  ARCHITECTURE.md  DESIGN_PATTERNS.md  IMPROVEMENTS_SUMMARY.md  INTEGRATION_GUIDES.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  test-analysis-summary.md  test-coverage-report.md
docs/TODOS/: CUMULATIVE_CLEANUP.md  INDEX.md  PROJECT_PLAN.md  README.md  TODO-001.md  TODO-002.md  TODO-003.md  TODO-004.md  TODO-005.md  TODO-006.md  TODO-007.md  TODO-008.md  TODO-009.md  TODO-010.md  TODO-011.md  TODO-012.md  TODO-013.md  TODO-014.md  TODO-015.md  TODO-016.md  TODO-018.md  TODO-019.md  TODO-020.md  TODO-021.md  TODO-022.md  TODO-023.md  TODO-024.md  TODO-025.md  TODO-027.md
docs/TODOS/archived/: CUMULATIVE_CLEANUP.md  TODO-017.md  TODO-018.md  TODO-023.md  TODO-024.md  TODO-025.md  TODO-027.md  TODO-031.md
docs/TODOS/future/: TODO-015.md  TODO-016.md  TODO-017.md  TODO-033.md
docs/fixes/: 01-http-protocol-violation.md  02-session-reinitialization.md  03-panic-prevention.md  04-progress-notification-handling.md  05-race-condition-prevention.md  06-large-message-handling.md  06-test-coverage-improvements.md  SUMMARY.md  cors-and-transport-fixes.md  test-driven-development-implementation.md
docs/protocol/: crawl.sh
docs/protocol/mcp/2025-06-18/: README.md  TODO.md
docs/protocol/mcp/2025-06-18/client/: README.md
docs/protocol/mcp/2025-06-18/client/elicitation/: README.md  types.md  ui-requirements.md
docs/protocol/mcp/2025-06-18/client/roots/: README.md
docs/protocol/mcp/2025-06-18/client/sampling/: README.md  requests.md  security.md
docs/protocol/mcp/2025-06-18/core/: README.md  errors.md  lifecycle.md  messages.md  types.md
docs/protocol/mcp/2025-06-18/server/: README.md
docs/protocol/mcp/2025-06-18/server/tools/: README.md  basics.md  resource-links.md  structured-output.md
docs/protocol/mcp/2025-06-18/transport/: README.md  headers.md  http.md  websocket.md
docs/testing/: tdd-lessons-learned.md  test-patterns-reference.md
examples/: basic_server.rs  custom_tools.rs  example_tools.rs  http_server.rs  legacy_tools.rs  output_schema_example.rs  security_test.rs  websocket_server.rs
examples/toy/: Cargo.toml  README.md  test_client.py  test_notifications.sh
examples/toy/notes/: demo-note.md
examples/toy/src/: lib.rs  main.rs  minimal_main.rs  server.rs  typed_handler.rs  typed_main.rs
examples/toy/tests/: http_session_integration.rs  integration.rs  mcp_flow_test.rs  notification_implementation_test.rs  resource_integration.rs
examples/utils/: mod.rs  path_security.rs
src/: content_types.rs  core.rs  error.rs  framework.rs  handler.rs  handlers.rs  health.rs  http.rs  http_handler.rs  http_handler_refactored.rs  lib.rs  limits.rs  logging.rs  main.rs  protocol.rs  protocol_impl.rs  protocol_testable.rs  response.rs  server.rs  shared.rs  tool_response.rs  tools.rs  transport.rs  typed_response.rs  types.rs  validation.rs  websocket.rs
src/framework/: handler.rs  mod.rs  notification.rs  providers.rs
src/framework/builder/: mod.rs  provider_methods.rs  tests.rs  tool_methods.rs
src/framework/registry/: mod.rs  provider_registration.rs  tool_registration.rs
src/http/: mod.rs  progress.rs  response.rs  session.rs  validation.rs
src/protocol/: message.rs  mod.rs
src/tests/: capability_negotiation_tests.rs  dependency_integration_tests.rs  edge_case_tests.rs  error_handling_tests.rs  handler_trait_tests.rs  jsonrpc_compliance_tests.rs  mod.rs  notifications_tests.rs  protocol_parsing_tests.rs  protocol_tests.rs  session_management_tests.rs  tools_tests.rs  transport_integration_tests.rs
src/tests/http/: handler_tests.rs  mod.rs  protocol_tests.rs  session_tests.rs
tests/: concurrent_clients_integration_test.rs  concurrent_clients_test.rs  concurrent_session_management_test.rs  debug_content_warning_test.rs  debug_content_warning_test.rs.disabled  debug_logging_volume_test.rs  debug_pollution_test.rs  health_check_test.rs  http_protocol_compliance_test.rs  large_message_handling_test.rs  malformed_request_handling_test.rs  mcp_basic_integration.rs  mcp_connection_test.rs  mcp_debugging_test.rs  mcp_error_handling_test.rs  mcp_http_integration_test.rs  mcp_http_session_test.rs  mcp_integration_tests.rs  mcp_notification_test.rs  mcp_protocol_test.rs  mcp_structured_data_test.rs  mcp_test_helpers.rs  mcp_tools_test.rs  mcp_trait_implementation_test.rs  nested_response_bug_test.rs  output_schema_test.rs  panic_prevention_test.rs  progress_notification_comprehensive_test.rs  progress_notification_test.rs  prompt_caching_behavior_test.rs  prompt_complex_templates_test.rs  prompt_concurrent_access_test.rs  prompt_edge_cases_test.rs  prompt_error_handling_test.rs  prompt_metadata_test.rs  prompt_parameter_handling_test.rs  prompt_system_basic_test.rs  prompt_test_helpers.rs  protocol_errors_integration_test.rs  protocol_flow_integration_test.rs  (+18 more)
tests/helpers/: mod.rs
