[workspace]
members = [".", "examples/toy"]

[package]
name = "solidmcp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures-util = "0.3"
once_cell = "1.19"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.36", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.7", features = ["v4"] }
warp = "0.3"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
tokio-tungstenite = "0.20"
reqwest = { version = "0.11", features = ["json", "cookies"] }