[workspace]
members = [".", "examples/toy"]

[package]
name = "solidmcp"
version = "0.1.0"
edition = "2021"
description = "A high-level Rust toolkit for building Model Context Protocol (MCP) servers with type safety and minimal boilerplate. Supports tools, resources, and prompts with automatic JSON schema generation."
license = "MIT"
repository = "https://github.com/anon/solidmcp"
homepage = "https://github.com/anon/solidmcp"
documentation = "https://docs.rs/solidmcp"
keywords = ["mcp", "model-context-protocol", "ai", "llm", "server"]
categories = ["network-programming", "web-programming", "api-bindings"]
authors = ["SolidMCP Contributors"]
readme = "README.md"

[lib]
name = "solidmcp"
path = "src/lib.rs"

# Optional binary for testing/development
[[bin]]
name = "solidmcp-server"
path = "src/main.rs"
required-features = ["bin"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures-util = "0.3"
once_cell = "1.19"
rand = "0.8"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.36", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.7", features = ["v4"] }
warp = "0.3"

[features]
default = []
bin = []

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
tokio-tungstenite = "0.20"
reqwest = { version = "0.11", features = ["json", "cookies"] }