[workspace]
members = [".", "examples/toy"]

[package]
name = "solidmcp"
version = "0.3.0-alpha.2"
edition = "2021"
description = "A high-level Rust toolkit for building Model Context Protocol (MCP) servers with type safety and minimal boilerplate. Supports tools, resources, and prompts with automatic JSON schema generation."
license = "MIT"
repository = "https://github.com/jupitersoftco/solidmcp"
homepage = "https://github.com/jupitersoftco/solidmcp"
documentation = "https://docs.rs/solidmcp"
keywords = ["mcp", "protocol", "ai", "llm", "server"]
categories = ["network-programming", "web-programming", "api-bindings"]
authors = ["Jupiter Software LLC <matt@jupitersoft.net>"]
readme = "README.md"

[lib]
name = "solidmcp"
path = "src/lib.rs"

# Optional binary for testing/development
[[bin]]
name = "solidmcp-server"
path = "src/main.rs"
required-features = ["bin"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures-util = "0.3"
once_cell = "1.20"
rand = "0.9"
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.46", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.8", features = ["v4"] }
warp = "0.3"

[features]
default = []
bin = []

[dev-dependencies]
tempfile = "3.14"
tokio-test = "0.4"
tokio-tungstenite = "0.27"
reqwest = { version = "0.12", features = ["json", "cookies"] }
