[package]
name = "toy-notes-server"
version = "0.1.0"
edition = "2021"
description = "Example MCP server demonstrating SolidMCP framework capabilities with a note-taking application"
license = "MIT"
publish = false

[lib]
name = "toy_notes_server"
path = "src/lib.rs"

[[bin]]
name = "toy-notes-server"
path = "src/main.rs"

[dependencies]
solidmcp = { path = "../.." }
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
notify = "8.1"
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.46", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.8", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.14"
tokio-tungstenite = "0.27"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
warp = "0.3"
tokio-stream = { version = "0.1", features = ["net"] }
